# ai-driven-network-remediation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  v1.txt
.github/actions/kind/: action.yaml
docs/: architecture.md  autorag.md  chatbot-bff.md  graph-nodes.md
hub/agent-service/: pyproject.toml
hub/agent-service/tests/: test_analyze.py  test_graph.py  test_lightspeed_node.py  test_notify.py  test_rag_retrieval.py  test_server.py  test_utils.py
hub/chatbot-service/: pyproject.toml
hub/chatbot-service/src/chatbot_service/: __init__.py  chat.py  config.py  kafka.py  probes.py  slo.py  utils.py
hub/chatbot-service/tests/: conftest.py  test_endpoints.py  test_helpers.py
hub/helm/: Chart.yaml  values.yaml
hub/helm/templates/: agent-service.yaml  chatbot-service.yaml  ingestion-job.yaml  ingestion-pipeline.yaml  lightspeed-networkpolicy.yaml  lightspeed-secret.yaml  mcp-secrets.yaml  slack-secret.yaml
hub/infra/aap-mock/: main.py
hub/infra/kafka/: README.md  values.yaml
hub/infra/kafka/templates/: kafka.yaml  (+1 more)
hub/infra/servicenow-mock/: Containerfile  main.py  pyproject.toml  test_main.py
hub/ingestion-pipeline/: pyproject.toml
hub/ingestion-pipeline/tests/: test_auto_ingest.py
hub/mcp-servers/mcp-lokistack/: README.md
playground-poc/: inference-service.yaml  mcp-servers-configmap.yaml  serving-runtime.yaml  values-playground.yaml
playground-poc/chart/: values.yaml
playground/chart/: Chart.yaml  values.yaml
scripts/local/: deploy-with-custom-image.sh
scripts/servicenow-bootstrap/: README.md  config.json  pyproject.toml
(+70 files in other folders)
