[project]
name = "chatbot-service"
version = "0.1.0"
description = "NOC Dashboard Backend-for-Frontend: aggregates MCP health, Kafka audit, ServiceNow state, and vLLM chat"
readme = "README.md"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "kafka-python-ng>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
chatbot-service = "chatbot_service:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
